packages/components/bolt-text/src/text.scss
@import '@bolt/core';

/* ------------------------------------ *\
   Text
\* ------------------------------------ */

// Attribute selectors for parent bolt-text
bolt-text {
  @include bolt-margin-bottom(medium); // Default vspacing
  @include bolt-font-size(medium); // Default font-size
  display: block;

  &[display="inline"] {
    display: inline;
  }
  &[display="block"] {
    display: block;
  }

  // Adding vspacing here so that we can remove vspacing on last-child
  &[headline],
  &[eyebrow] {
    @include bolt-margin-bottom(xxsmall);
  }
  &[subheadline] {
    @include bolt-margin-bottom(xsmall);
  }

  &:last-child {
    @include bolt-margin-bottom(0);
  }
}

$bolt-text-v2--minus-letter-spacing: -0.025rem;
$bolt-text-v2--plus-letter-spacing: 0.05rem;

.c-bolt-text-v2 {
  @include bolt-margin(0);
  @include bolt-padding(0);

  a {
    opacity: 1;
    transition: all $bolt-transition;

    &:link,
    &:visited {
      color: inherit;
      color: var(--bolt-theme-link, inherit);
      text-decoration: underline;
    }

    &:hover {
      opacity: $bolt-global-link-hover-opacity;
    }

    &:active,
    &:focus:active {
      opacity: $bolt-global-link-active-opacity;
    }
  }

  &.c-bolt-text-v2--headline {
    a:link,
    a:visited {
      text-decoration: none;
    }

    a:hover {
      text-decoration: underline;
    }
  }
}

.c-bolt-text-v2 {
  // Font-Family
  &--headline {
    @include bolt-font-family(heading);
  }
  &--body {
    @include bolt-font-family(body);
  }
  &--code {
    @include bolt-font-family(code);
  }

  // Color
  &--color-theme-headline {
    color: inherit;
    color: var(--bolt-theme-heading, inherit);
  }
  &--color-theme-body {
    color: inherit;
    color: var(--bolt-theme-body, inherit);
  }

  // Font Weight Options
  &--font-weight-semibold {
    @include bolt-font-weight(semibold);
  }
  &--font-weight-regular {
    @include bolt-font-weight(regular);
  }
  &--font-weight-bold {
    @include bolt-font-weight(bold);
  }

  // Italic style
  &--font-style-regular {
    font-style: normal;
  }
  &--font-style-italic {
    font-style: italic;
  }

  // Font size
  &--font-size-xxxlarge {
    @include bolt-font-size(xxxlarge);
    letter-spacing: $bolt-text-v2--minus-letter-spacing;

    &.is-long {
      font-size: $bolt-font-size--xxxlarge--min;
    }
  }
  &--font-size-xxlarge {
    @include bolt-font-size(xxlarge);
    letter-spacing: $bolt-text-v2--minus-letter-spacing;
  }
  &--font-size-xlarge {
    @include bolt-font-size(xlarge);
  }
  &--font-size-large {
    @include bolt-font-size(large);
  }
  &--font-size-medium {
    @include bolt-font-size(medium);
  }
  &--font-size-small {
    @include bolt-font-size(small);
    letter-spacing: $bolt-text-v2--plus-letter-spacing;
  }
  &--font-size-xsmall {
    @include bolt-font-size(xsmall);
    letter-spacing: $bolt-text-v2--plus-letter-spacing;
  }

  // Display type
  &--inline {
    display: inline;
  }
  &--block {
    display: block;
  }

  // Align content
  &--align-left {
    text-align: left;
  }
  &--align-center {
    text-align: center;
  }
  &--align-right {
    text-align: right;
  }

  // Transform text
  &--text-transform-regular {
    text-transform: none;
  }
  &--text-transform-uppercase {
    text-transform: uppercase;
  }
  &--text-transform-lowercase {
    text-transform: lowercase;
  }
  &--text-transform-capitalize {
    text-transform: capitalize;
  }

  // Letter spacing
  &--letter-spacing-narrow {
    letter-spacing:  $bolt-text-v2--minus-letter-spacing;
  }
  &--letter-spacing-regular {
    letter-spacing: normal;
  }
  &--letter-spacing-wide {
    letter-spacing:  $bolt-text-v2--plus-letter-spacing;
  }

  // Line height
  $bolt-line-height--add-loose: 0.2;

  &--line-height-tight {
    line-height: $bolt-line-height--tight;
  }
  // These are already defined with the font-size mixin. Only here for reference.
  // &--line-height-regular {
  //   &.c-bolt-text-v2--font-size-xxxlarge {
  //     line-height: $bolt-line-height--xxxlarge;
  //   }
  //   &.c-bolt-text-v2--font-size-xxlarge {
  //     line-height: $bolt-line-height--xxlarge;
  //   }
  //   &.c-bolt-text-v2--font-size-xlarge {
  //     line-height: $bolt-line-height--xlarge;
  //   }
  //   &.c-bolt-text-v2--font-size-large {
  //     line-height: $bolt-line-height--large;
  //   }
  //   &.c-bolt-text-v2--font-size-medium {
  //     line-height: $bolt-line-height--medium;
  //   }
  //   &.c-bolt-text-v2--font-size-small {
  //     line-height: $bolt-line-height--small;
  //   }
  //   &.c-bolt-text-v2--font-size-xsmall {
  //     line-height: $bolt-line-height--xsmall;
  //   }
  // }
  &--line-height-loose {
    &.c-bolt-text-v2--font-size-xxxlarge {
      line-height: ($bolt-line-height--xxxlarge + $bolt-line-height--add-loose);
    }
    &.c-bolt-text-v2--font-size-xxlarge {
      line-height: ($bolt-line-height--xxlarge + $bolt-line-height--add-loose);
    }
    &.c-bolt-text-v2--font-size-xlarge {
      line-height: ($bolt-line-height--xlarge + $bolt-line-height--add-loose);
    }
    &.c-bolt-text-v2--font-size-large {
      line-height: ($bolt-line-height--large + $bolt-line-height--add-loose);
    }
    &.c-bolt-text-v2--font-size-medium {
      line-height: ($bolt-line-height--medium + $bolt-line-height--add-loose);
    }
    &.c-bolt-text-v2--font-size-small {
      line-height: ($bolt-line-height--small + $bolt-line-height--add-loose);
    }
    &.c-bolt-text-v2--font-size-xsmall {
      line-height: ($bolt-line-height--xsmall + $bolt-line-height--add-loose);
    }
  }

  // Quoted style
  &--quoted {
    &:before,
    &:after {
      font-family: 'Georgia', serif;
    }

    &:before {
      position: absolute;
      content: '\201C';
      transform: translate3d(-110%, 0, 0);
    }

    &:after {
      content: '\201D';
    }
  }

  // Opacity
  &--opacity-100 {
    opacity: 1;
  }
  &--opacity-80 {
    opacity: 0.8;
  }
  &--opacity-60 {
    opacity: 0.6;
  }
  &--opacity-40 {
    opacity: 0.4;
  }
  &--opacity-20 {
    opacity: 0.2;
  }

  // Icon Alignment

  // @todo: uncomment once icon component decoupled and we can target wrapper around the icon.
  // &.has-icon:not(.has-url) {

  //   &.c-bolt-text-v2--icon-align-left-hang,
  //   &.c-bolt-text-v2--icon-align-right-hang {
  //     display: flex;
  //     justify-content: space-between;
  //   }
  //   &.c-bolt-text-v2--icon-align-left,
  //   &.c-bolt-text-v2--icon-align-left-hang {
  //     bolt-icon {
  //       margin-right: 0.25rem;
  //     }
  //   }
  //   &.c-bolt-text-v2--icon-align-right,
  //   &.c-bolt-text-v2--icon-align-right-hang  {
  //     bolt-icon {
  //       margin-left: 0.25rem;
  //     }
  //   }
  // }
  // &.has-icon.has-url { // If we have an <a> tag we need that to be the flex parent

  //   &.c-bolt-text-v2--icon-align-left-hang,
  //   &.c-bolt-text-v2--icon-align-right-hang {
  //     > a {
  //       display: flex;
  //       justify-content: space-between;
  //     }
  //   }
  //   &.c-bolt-text-v2--icon-align-left,
  //   &.c-bolt-text-v2--icon-align-left-hang {
  //     > a bolt-icon {
  //       margin-right: 0.25rem;
  //     }
  //   }
  //   &.c-bolt-text-v2--icon-align-right,
  //   &.c-bolt-text-v2--icon-align-right-hang {
  //     > a bolt-icon {
  //       margin-left: 0.25rem;
  //     }
  //   }
  // }

  // &--vertical-align-top.has-icon {
  //   &.c-bolt-text-v2--font-size-xxxlarge bolt-icon {
  //     margin-top: 0.06em;
  //   }
  //   &.c-bolt-text-v2--font-size-xxlarge bolt-icon {
  //     margin-top: 0.13em;
  //   }
  //   &.c-bolt-text-v2--font-size-xlarge bolt-icon {
  //     margin-top: 0.15em;
  //   }
  //   &.c-bolt-text-v2--font-size-large bolt-icon {
  //     margin-top: 0.18em;
  //   }
  //   &.c-bolt-text-v2--font-size-medium bolt-icon {
  //     margin-top: 0.3em;
  //   }
  //   &.c-bolt-text-v2--font-size-small bolt-icon {
  //     margin-top: 0.25em;
  //   }
  //   &.c-bolt-text-v2--font-size-xsmall bolt-icon {
  //     margin-top: 0.15em;
  //   }
  //   bolt-icon {
  //     vertical-align: top;
  //   }
  // }
  // &--vertical-align-center.has-icon {
  //   bolt-icon {
  //     align-self: center;
  //   }
  // }
}

